linkerd/add-linkerd-mesh-injection/.chainsaw-test/chainsaw-step-02-apply-3.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    config.linkerd.io/proxy-await: disabled
    linkerd.io/inject: disabled
  name: lmi-ns03
