linkerd/add-linkerd-mesh-injection/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-linkerd-mesh-injection
status:
  ready: true
