linkerd/add-linkerd-mesh-injection/.chainsaw-test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: add-linkerd-mesh-injection
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../add-linkerd-mesh-injection.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        file: chainsaw-step-02-apply-1.yaml
    - apply:
        file: chainsaw-step-02-apply-2.yaml
    - apply:
        file: chainsaw-step-02-apply-3.yaml
    - apply:
        file: chainsaw-step-02-apply-4.yaml
    - apply:
        file: chainsaw-step-02-apply-5.yaml
    - assert:
        file: chainsaw-step-02-assert-1.yaml
    - assert:
        file: chainsaw-step-02-assert-2.yaml
    - assert:
        file: chainsaw-step-02-assert-3.yaml
    - assert:
        file: chainsaw-step-02-assert-4.yaml
    - assert:
        file: chainsaw-step-02-assert-5.yaml
